--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -5,9 +5,16 @@ on:
   push:
     branches: [main, feature/*, develop]
 
+# Cancel in-progress runs for same workflow + ref
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   verify:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read  # Read-only by default (principle of least privilege)
     env:
       NODE_OPTIONS: --max-old-space-size=8192
     
@@ -24,6 +31,20 @@ jobs:
         uses: pnpm/action-setup@v4
         with:
           version: 9.0.0
+          run_install: false  # Don't auto-install, we control caching
+      
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+      
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
       
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
