--- a/.github/workflows/requirements-index.yml
+++ b/.github/workflows/requirements-index.yml
@@ -10,14 +10,26 @@ on:
       - "docs/requirements/**"
       - "scripts/build-req-index.mjs"
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9.0.0
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
+          cache: 'pnpm'
+      - run: pnpm install --frozen-lockfile
       - run: node scripts/build-req-index.mjs
       - uses: actions/upload-artifact@v4
         with:
