--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,33 +20,34 @@
         "esbenp.prettier-vscode"
       ],
       "settings": {
-        // Agent: FULL AUTO in container
+        // — Agent: FULL AUTO in container —
         "chat.agent.enabled": true,
         "chat.agent.maxRequests": 999,
         "chat.tools.global.autoApprove": true,
-        
-        // Stop interactive CLI pauses (y/n etc.)
+
+        // Stop interactive CLI pauses (y/n, prompts)
         "chat.tools.terminal.autoReplyToPrompts": true,
-        
+
         // Auto-accept edits (correct key)
         "chat.editing.autoAcceptDelay": 3,
-        
+
         // Checkpoints for rollback
         "chat.checkpoints.enabled": true,
-        
-        // Disable MCP discovery entirely (boolean, not object)
+
+        // Disable MCP discovery (boolean, not object)
         "chat.mcp.discovery.enabled": false,
-        
-        // File edits - auto-approve pattern (container-safe)
+
+        // File edits: auto-approve (with minimal guards)
         "chat.tools.edits.autoApprove": {
           "**/*": true,
           "**/.env*": false,
           "**/.vscode/**": false,
           "**/package.json": false,
-          "**/pnpm-lock.yaml": false
+          "**/pnpm-lock.yaml": false,
+          "**/yarn.lock": false
         },
-        
-        // Terminal auto-approve: safe commands only — NO 'git push' here
+
+        // Terminal auto-approve: allow safe, block pushes
         "chat.tools.terminal.autoApprove": {
           "/^git (status|branch|checkout\\b.*|add\\b.*|commit\\b.*|show\\b.*|diff\\b.*|fetch\\b.*|stash\\b.*|restore\\b.*|switch\\b.*|pull\\b.*)$/": true,
           "/^(npm|pnpm|yarn|bun) (ci|install|run build|run dev|run test|run lint|test\\b.*|build\\b.*)$/": true,
@@ -61,28 +62,29 @@
           "pwd": true,
           "mkdir": true,
           "cp": true,
-          
-          // Hard blocks
+
+          // Hard blocks — include ALL push variants
+          "/^git push\\b/": false,
+          "/^git push\\s+--force/": false,
           "del": false,
           "rm": false,
           "rmdir": false,
           "chmod": false,
-          "chown": false,
-          "/^git push\\b/": false,
-          "/^git push\\s+--force/": false
+          "chown": false
         },
-        
-        // Workspace trust - container is safe environment
+
+        // Trust: zero prompts in container
         "security.workspace.trust.enabled": false,
         "security.workspace.trust.untrustedFiles": "open",
         "security.workspace.trust.startupPrompt": "never",
-        
-        // Git branch protection
+
+        // Agent can run tasks silently
+        "github.copilot.chat.agent.runTasks": true,
+        "github.copilot.chat.codeGeneration.useInstructionFiles": true,
+
+        // Editor QoL
         "git.branchProtection": ["main", "master"],
-        "git.branchProtectionPrompt": "alwaysPrompt",
-        
-        // Copilot instructions
-        "github.copilot.chat.codeGeneration.useInstructionFiles": true
+        "git.branchProtectionPrompt": "alwaysPrompt"
       }
     }
   },
