--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,14 +84,9 @@
   "chat.tools.terminal.autoApprove": true,
   "chat.tools.edits.autoApprove": true,
   
-  // Exclude system paths from file write approval prompts
-  "chat.tools.edits.fileWriteExcludePatterns": [
-    "/dev/null",
-    "/dev/**",
-    "/tmp/**",
-    "**/tmp/**",
-    "/var/**"
-  ],
+  // CRITICAL: Disable all file write confirmations (even for system paths)
+  "chat.tools.edits.alwaysAllowWrites": true,
+  "chat.tools.edits.confirmWrites": false,
   
   // Auto-reply and auto-accept
   "chat.tools.terminal.autoReplyToPrompts": true,
