fix: Resolve all critical security, auth, and code quality issues
- settings.json: Remove misleading auto-approval header, restore workspace trust security
- SECURITY_FIXES doc: Update to reflect workspace trust re-enabled in both files
- app/hr/page.tsx: Add stable keys to prevent React hydration issues on locale change
- ClientDate.tsx: Remove stray JSDoc marker breaking formatting
- lib/audit.ts: Fix unsafe defaults (orgId undefined, safe uppercasing, separate entityId/Name)
- lib/fm-auth-middleware.ts: Fix subscription.plan access, use restrictive defaults, enforce ctx.orgId
- lib/mongo.ts: Add shared isTlsEnabled() utility for safe MongoDB TLS detection
- lib/mongodb-unified.ts: Use shared isTlsEnabled() utility (consistent with mongo.ts)
- server/middleware/withAuthRbac.ts: Add role validation in all auth branches, hoist verifyToken import, wrap in try-catch

All issues from user audit resolved with zero exceptions.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,13 +44,13 @@
   "git.branchProtectionPrompt": "alwaysPrompt",
 
   // ============================================================================
-  // FULL AUTO-APPROVAL FOR AGENT AUTONOMY (ALL SCOPES)
-  // - Unconditional auto-approve: User, Workspace, and Remote
-  // - Zero confirmation prompts for maximum agent autonomy
-  // - Aligned with Fixzit governance: "run fully automatic, no prompts"
+  // AGENT ACTIONS REQUIRE CONFIRMATION — No auto-approval
+  // - Auto-approve disabled for security: destructive operations need consent
+  // - Developers can opt-in via User Settings for their workflow preferences
+  // - Workspace enforces safe defaults to protect all team members
   // ============================================================================
 
-  // GitHub Copilot Settings - Full autonomy enabled
+  // GitHub Copilot Settings - Full tool access enabled, confirmations required
   "github.copilot.enable": { "*": true },
   "github.copilot.chat.enable": true,
   "github.copilot.chat.codeGeneration.useInstructionFiles": true,
@@ -94,11 +94,6 @@
   
   // Disable MCP discovery
   "chat.mcp.discovery.enabled": false,
-
-  // SECURITY: Workspace trust disabled for full agent autonomy
-  "security.workspace.trust.enabled": false,
-  "security.workspace.trust.untrustedFiles": "open",
-  "security.workspace.trust.startupPrompt": "never",
 
   // Limit CodeRabbit's automatic review scope to avoid token/context exhaustion
   // and reduce extension timeouts on large repositories. These safer defaults
