fix: remove fallback values from GitHub Actions secrets
Cleaned up test environment variables:
- Removed || '' fallback from secrets references
- Secrets should be configured in GitHub repository settings
- Warnings are informational only (expected when secrets not yet configured)

Note: These are test credentials for E2E tests in CI/CD.
Configure in: GitHub Repo → Settings → Secrets and Variables → Actions

--- a/.github/workflows/fixzit-quality-gates.yml
+++ b/.github/workflows/fixzit-quality-gates.yml
@@ -124,18 +124,18 @@ jobs:
       - name: Unit Tests
         shell: bash
         env:
-          TEST_SUPERADMIN_EMAIL: ${{ secrets.TEST_SUPERADMIN_EMAIL || '' }}
-          TEST_SUPERADMIN_PASSWORD: ${{ secrets.TEST_SUPERADMIN_PASSWORD || '' }}
-          TEST_ADMIN_EMAIL: ${{ secrets.TEST_ADMIN_EMAIL || '' }}
-          TEST_ADMIN_PASSWORD: ${{ secrets.TEST_ADMIN_PASSWORD || '' }}
-          TEST_MANAGER_EMAIL: ${{ secrets.TEST_MANAGER_EMAIL || '' }}
-          TEST_MANAGER_PASSWORD: ${{ secrets.TEST_MANAGER_PASSWORD || '' }}
-          TEST_TECHNICIAN_EMAIL: ${{ secrets.TEST_TECHNICIAN_EMAIL || '' }}
-          TEST_TECHNICIAN_PASSWORD: ${{ secrets.TEST_TECHNICIAN_PASSWORD || '' }}
-          TEST_TENANT_EMAIL: ${{ secrets.TEST_TENANT_EMAIL || '' }}
-          TEST_TENANT_PASSWORD: ${{ secrets.TEST_TENANT_PASSWORD || '' }}
-          TEST_VENDOR_EMAIL: ${{ secrets.TEST_VENDOR_EMAIL || '' }}
-          TEST_VENDOR_PASSWORD: ${{ secrets.TEST_VENDOR_PASSWORD || '' }}
+          TEST_SUPERADMIN_EMAIL: ${{ secrets.TEST_SUPERADMIN_EMAIL }}
+          TEST_SUPERADMIN_PASSWORD: ${{ secrets.TEST_SUPERADMIN_PASSWORD }}
+          TEST_ADMIN_EMAIL: ${{ secrets.TEST_ADMIN_EMAIL }}
+          TEST_ADMIN_PASSWORD: ${{ secrets.TEST_ADMIN_PASSWORD }}
+          TEST_MANAGER_EMAIL: ${{ secrets.TEST_MANAGER_EMAIL }}
+          TEST_MANAGER_PASSWORD: ${{ secrets.TEST_MANAGER_PASSWORD }}
+          TEST_TECHNICIAN_EMAIL: ${{ secrets.TEST_TECHNICIAN_EMAIL }}
+          TEST_TECHNICIAN_PASSWORD: ${{ secrets.TEST_TECHNICIAN_PASSWORD }}
+          TEST_TENANT_EMAIL: ${{ secrets.TEST_TENANT_EMAIL }}
+          TEST_TENANT_PASSWORD: ${{ secrets.TEST_TENANT_PASSWORD }}
+          TEST_VENDOR_EMAIL: ${{ secrets.TEST_VENDOR_EMAIL }}
+          TEST_VENDOR_PASSWORD: ${{ secrets.TEST_VENDOR_PASSWORD }}
         run: |
           mkdir -p .artifacts
           status=0
