--- a/env.example
+++ b/env.example
@@ -49,6 +49,133 @@ NEXTAUTH_SECRET=
 
 # Internal API secret for server-to-server authentication
 # This should be DIFFERENT from NEXTAUTH_SECRET (security best practice)
+
+# =============================================================================
+# SOUQ MARKETPLACE CONFIGURATION
+# =============================================================================
+
+# === FEATURE FLAGS (Souq Marketplace) ===
+# Enable/disable marketplace features (gradual rollout)
+SOUQ_FEATURE_ADS=false
+SOUQ_FEATURE_DEALS=false
+SOUQ_FEATURE_BUY_BOX=false
+SOUQ_FEATURE_SETTLEMENT=false
+SOUQ_FEATURE_RETURNS_CENTER=false
+SOUQ_FEATURE_BRAND_REGISTRY=false
+SOUQ_FEATURE_ACCOUNT_HEALTH=false
+SOUQ_FEATURE_FULFILLMENT_BY_FIXZIT=false
+SOUQ_FEATURE_A_TO_Z_CLAIMS=false
+SOUQ_FEATURE_SPONSORED_PRODUCTS=false
+SOUQ_FEATURE_AUTO_REPRICER=false
+SOUQ_FEATURE_REVIEWS_QA=false
+
+# === REDIS (Caching & Job Queues) ===
+# Development: redis://localhost:6379
+# Production: Use managed Redis (AWS ElastiCache, Redis Cloud)
+REDIS_URL=redis://localhost:6379
+REDIS_PASSWORD=
+REDIS_TTL=300
+
+# === BULLMQ (Background Jobs) ===
+# Uses Redis for queue storage
+BULLMQ_REDIS_HOST=localhost
+BULLMQ_REDIS_PORT=6379
+BULLMQ_REDIS_PASSWORD=
+
+# === SEARCH ENGINE (OpenSearch or Meilisearch) ===
+# OpenSearch (AWS)
+OPENSEARCH_URL=
+OPENSEARCH_USERNAME=
+OPENSEARCH_PASSWORD=
+
+# Meilisearch (Alternative)
+MEILISEARCH_HOST=http://localhost:7700
+MEILISEARCH_API_KEY=
+
+# === S3-COMPATIBLE STORAGE (Media & Documents) ===
+# AWS S3, Cloudflare R2, MinIO, etc.
+S3_ENDPOINT=
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=fixzit-marketplace
+S3_REGION=us-east-1
+
+# === EVENT BUS (NATS or Kafka) ===
+# NATS (Recommended for simpler setup)
+NATS_URL=nats://localhost:4222
+NATS_TOKEN=
+
+# Kafka (Alternative for high-scale deployments)
+KAFKA_BROKERS=localhost:9092
+KAFKA_CLIENT_ID=fixzit-souq
+KAFKA_GROUP_ID=fixzit-souq-group
+
+# === PAYMENT GATEWAYS ===
+# Mada (Saudi debit cards)
+MADA_MERCHANT_ID=
+MADA_API_KEY=
+MADA_WEBHOOK_SECRET=
+
+# STC Pay
+STC_PAY_MERCHANT_ID=
+STC_PAY_API_KEY=
+STC_PAY_WEBHOOK_SECRET=
+
+# Apple Pay
+APPLE_PAY_MERCHANT_ID=
+APPLE_PAY_CERTIFICATE=
+APPLE_PAY_KEY=
+
+# === CARRIER INTEGRATIONS (Shipping) ===
+# Aramex
+ARAMEX_ACCOUNT_NUMBER=
+ARAMEX_USERNAME=
+ARAMEX_PASSWORD=
+ARAMEX_ACCOUNT_PIN=
+ARAMEX_ACCOUNT_ENTITY=
+ARAMEX_ACCOUNT_COUNTRY_CODE=SA
+ARAMEX_API_URL=https://ws.aramex.net/ShippingAPI.V2/Shipping/Service_1_0.svc
+
+# SMSA Express
+SMSA_USERNAME=
+SMSA_PASSWORD=
+SMSA_API_URL=https://api.smsa.com.sa
+
+# SPL (Saudi Post Logistics)
+SPL_API_KEY=
+SPL_API_URL=https://api.spl.com.sa
+
+# === ZATCA E-INVOICING (Saudi VAT Compliance) ===
+ZATCA_API_URL=https://api.zatca.gov.sa
+ZATCA_OTP=
+ZATCA_CERTIFICATE=
+ZATCA_PRIVATE_KEY=
+
+# === NOTIFICATIONS ===
+# Email (SendGrid, AWS SES, Mailgun)
+SENDGRID_API_KEY=
+FROM_EMAIL=noreply@fixzit.sa
+
+# SMS (Twilio, Unifonic)
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
+
+# === MONITORING & OBSERVABILITY ===
+# Prometheus
+PROMETHEUS_PORT=9090
+
+# Grafana
+GRAFANA_URL=http://localhost:3001
+GRAFANA_API_KEY=
+
+# Sentry (Error tracking)
+SENTRY_DSN=
+SENTRY_ORG=fixzit
+SENTRY_PROJECT=fixzit-marketplace
+
+# Internal API secret for server-to-server authentication
+# This should be DIFFERENT from NEXTAUTH_SECRET (security best practice)
 # Generate: openssl rand -base64 32
 INTERNAL_API_SECRET=
 
