fix: Disable PowerShell extension and uninstall (macOS uses zsh/bash)
- Added PowerShell disable flags to .vscode/settings.json
- Added ms-vscode.powershell to unwantedRecommendations
- Removed extension directory (causes startup errors on macOS)
- Project uses zsh/bash exclusively, PowerShell not needed

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,5 +8,8 @@
         "github.vscode-github-actions",
         "christian-kohler.npm-intellisense",
         "codium.codium"
+    ],
+    "unwantedRecommendations": [
+        "ms-vscode.powershell"
     ]
 }
