--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "decimal.js": "^10.6.0",
     "dotenv": "^17.2.2",
     "fast-xml-parser": "^5.2.5",
+    "firebase-admin": "^13.6.0",
     "framer-motion": "^11.18.2",
     "html2canvas": "^1.4.1",
     "ioredis": "^5.8.2",
@@ -150,6 +151,7 @@
     "swr": "^2.3.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.10.5",
     "unified": "^11.0.5",
     "zod": "^4.1.11",
     "zustand": "^5.0.8"
