--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "next": "^15.5.4",
     "next-auth": "5.0.0-beta.30",
     "next-themes": "^0.4.6",
+    "node-cron": "^4.2.1",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -179,6 +180,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/marked": "^6.0.0",
     "@types/node": "^24.9.2",
+    "@types/node-cron": "^3.0.11",
     "@types/qrcode": "^1.5.6",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
