--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -1,4 +1,4 @@
-name: NodeJS with Webpack
+name: Next.js CI Build
 
 on:
   push:
@@ -12,7 +12,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 30
     
     strategy:
       matrix:
@@ -68,14 +68,14 @@ jobs:
         continue-on-error: false
         env:
           NODE_ENV: test
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          MONGODB_URI: ${{ secrets.MONGODB_URI || 'mongodb://localhost:27017/fixzit-test' }}
 
       - name: Check Code Coverage
         run: |
           if [ -f coverage/coverage-summary.json ]; then
             COVERAGE=$(node -e "const cov = require('./coverage/coverage-summary.json'); const total = cov.total; const pct = total.lines.pct; console.log(pct);")
             echo "Code coverage: ${COVERAGE}%"
-            if [ $(echo "$COVERAGE < 80" | bc -l) -eq 1 ]; then
+            if [ $(node -e "console.log($COVERAGE < 80 ? 1 : 0)") -eq 1 ]; then
               echo "❌ Code coverage ${COVERAGE}% is below 80% threshold"
               exit 1
             fi
@@ -90,9 +90,9 @@ jobs:
         env:
           NODE_OPTIONS: --max-old-space-size=8192
           NODE_ENV: production
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
-          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
-          NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL }}
+          MONGODB_URI: ${{ secrets.MONGODB_URI || 'mongodb://localhost:27017/fixzit' }}
+          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET || 'default-secret-for-ci-build-only' }}
+          NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL || 'http://localhost:3000' }}
           NEXT_PUBLIC_APP_URL: http://localhost:3000
           
       - name: Upload Build Artifacts
