--- a/package.json
+++ b/package.json
@@ -109,9 +109,11 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@sendgrid/mail": "^8.1.6",
+    "@sentry/nextjs": "^10.25.0",
     "axios": "^1.13.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "bullmq": "^5.63.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
@@ -129,6 +131,7 @@
     "lru-cache": "^11.2.1",
     "lucide-react": "^0.294.0",
     "marked": "^17.0.0",
+    "meilisearch": "^0.54.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
     "nanoid": "^5.1.5",
