--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
     "nanoid": "^5.1.5",
+    "nats": "^2.29.3",
     "next": "^15.5.4",
     "next-auth": "5.0.0-beta.30",
     "next-themes": "^0.4.6",
